--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "rm": "rm -rf docs",
+    "mv": "mv build docs",
+    "git": "git add . && git commit && git push origin master",
+    "deploy": "npm run rm && npm run build && npm run mv && npm run git",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,4 +44,5 @@
       "last 1 safari version"
     ]
   }
+  "homepage":"https://majayaka.github.io/P7-kasa/"
 }
